// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description generation should render example function for model 1`] = `
"/**
 * Main Description
 */
class Test {
  private _stringProp: string;
  /**
   * Description
   * @example Example
   */
  private _numberProp?: number;
  /**
   * @example Example 1, Example 2
   */
  private _objectProp?: NestedTest;
  private _additionalProperties?: Map<string, any>;

  constructor(input: {
    stringProp: string,
    numberProp?: number,
    objectProp?: NestedTest,
    additionalProperties?: Map<string, any>,
  }) {
    this._stringProp = input.stringProp;
    this._numberProp = input.numberProp;
    this._objectProp = input.objectProp;
    this._additionalProperties = input.additionalProperties;
  }

  get stringProp(): string { return this._stringProp; }
  set stringProp(stringProp: string) { this._stringProp = stringProp; }

  get numberProp(): number | undefined { return this._numberProp; }
  set numberProp(numberProp: number | undefined) { this._numberProp = numberProp; }

  get objectProp(): NestedTest | undefined { return this._objectProp; }
  set objectProp(objectProp: NestedTest | undefined) { this._objectProp = objectProp; }

  get additionalProperties(): Map<string, any> | undefined { return this._additionalProperties; }
  set additionalProperties(additionalProperties: Map<string, any> | undefined) { this._additionalProperties = additionalProperties; }
}"
`;

exports[`Description generation should render example function for model 2`] = `
"/**
 * @example Example 1, Example 2
 */
class NestedTest {
  private _stringProp?: string;
  private _additionalProperties?: Map<string, any>;

  constructor(input: {
    stringProp?: string,
    additionalProperties?: Map<string, any>,
  }) {
    this._stringProp = input.stringProp;
    this._additionalProperties = input.additionalProperties;
  }

  get stringProp(): string | undefined { return this._stringProp; }
  set stringProp(stringProp: string | undefined) { this._stringProp = stringProp; }

  get additionalProperties(): Map<string, any> | undefined { return this._additionalProperties; }
  set additionalProperties(additionalProperties: Map<string, any> | undefined) { this._additionalProperties = additionalProperties; }
}"
`;
